fixing #[py] tags, enums in environment_setup

--- a/docstrings/astro/frame_conversion.yaml
+++ b/docstrings/astro/frame_conversion.yaml
@@ -218,7 +218,7 @@ functions:
       declination (:math:`\delta`), and prime meridian longitude
       (:math:`W`) angles.
 
-    parameters:
+    parameters:                                                            # [py]
       - name: pole_declination                                             # [py]
         type: float                                                        # [py]
         description: |
