--- a/docstrings/numerical_simulation/environment.yaml
+++ b/docstrings/numerical_simulation/environment.yaml
@@ -21,27 +21,27 @@ classes:
        stored inside a Body object, and represents the flight conditions
        of a single body w.r.t. a single central body.
 
-    properties:
+    properties: # [py]
       - name: aerodynamic_angle_calculator # [py]
         type: AerodynamicAngleCalculator # [py]
-        description: |
+        description: |  # [py]
           The object that is responsible for computing various relevant
           flight dynamics angles and frame rotations.
 
       - name: longitude # [py]
         type: float # [py]
-        description: |
+        description: |  # [py]
           The body-fixed longitude of the body w.r.t. its central body.
 
       - name: latitude # [py]
         type: float # [py]
-        description: |
+        description: | # [py]
           The body-fixed geographic latitude of the body w.r.t. its
           central body.
 
       - name: geodetic_latitude # [py]
         type: float # [py]
-        description: |
+        description: |  # [py]
           The body-fixed geodetic latitude of the body w.r.t. its central
           body, using an :py:class:`~OblateSpheroidBodyShapeModel` of the
           central body. If no such model is defined in the central body,
@@ -49,25 +49,25 @@ classes:
 
       - name: altitude # [py]
         type: float # [py]
-        description: |
+        description: | # [py]
           The altitude of this body w.r.t. the central body (using the
           :py:class:`~ShapeModel` of the central body).
 
       - name: time # [py]
         type: float # [py]
-        description: |
+        description: | # [py]
           The current time, at which this object was last updated
 
       - name: body_centered_body_fixed_state # [py]
         type: numpy.ndarray # [py]
-        description:  |
+        description:  | # [py]
           Cartesian translational state, expressed in a frame centered
           at, and fixed to, the central body. Note that, due to the
           rotation of the central body, the norm of the body-fixed,
           body-centered, velocity differs from the norm of the inertial
-          body-centered velocity.
+          body-centered velocity. # [py]
 
-    methods:
+    #methods:
       
 
   - name: AtmosphericFlightConditions
@@ -85,56 +85,56 @@ classes:
        object, and represents the flight conditions of a single body
        w.r.t. a single central body.
 
-    properties:
+    properties: # [py]
       - name: density # [py]
         type: float # [py]
-        description: |
+        description: | # [py]
           The freestream atmospheric density at the body's current
           location.
 
       - name: temperature # [py]
         type: float # [py]
-        description: |
+        description: | # [py]
           The freestream atmospheric temperature at the body's current
           location.
 
       - name: dynamic_pressure # [py]
         type: float # [py]
-        description: |
+        description: | # [py]
           The freestream atmospheric dynamic pressure at the body's
           current location.
 
       - name: pressure # [py]
         type: float # [py]
-        description: |
+        description: | # [py]
           The freestream atmospheric static pressure at the body's
           current location.
 
       - name: speed_of_sound # [py]
         type: float # [py]
-        description: |
+        description: | # [py]
           The freestream atmospheric speed of sound at the body's current
           location.
 
       - name: airspeed # [py]
         type: float # [py]
-        description: |
+        description: | # [py]
           The airspeed of the body w.r.t. the atmosphere.
 
       - name: airspeed_velocity # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           The velocity vector of the body w.r.t. the freestream
           atmosphere (e.g. vectorial counterpart of airspeed).
 
       - name: mach_number # [py]
         type: float # [py]
-        description: 
+        description: | # [py]
           The freestream Mach number of the body
 
       - name: aero_coefficient_independent_variables # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           List of current values of independent variables of aerodynamic
           coefficients. This list is only defined if the body has an
           :py:class:`~AerodynamicCoefficientInterface` that has
@@ -143,7 +143,7 @@ classes:
 
       - name: control_surface_aero_coefficient_independent_variables # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           List of lists current values of independent variables of
           aerodynamic coefficients for control surfaces. The outer list
           defines the control surface, the inner list the values of the
@@ -154,7 +154,7 @@ classes:
 
       - name: aerodynamic_coefficient_interface # [py]
         type: AerodynamicCoefficientInterface # [py]
-        description: |
+        description: | # [py]
           Object extracted from the same Body object as this
           :py:class:`~AtmosphericFlightConditions` object, which defines
           the aerodynamic coefficients.
@@ -178,7 +178,7 @@ classes:
     properties:
       - name: state # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: |  # [py]
           The translational state of the Body, as set during the current
           step of the numerical propagation. The translational state
           stored here is always in Cartesian elements, w.r.t. the global
@@ -193,26 +193,26 @@ classes:
 
       - name: position # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           The translational position of the Body, as set during the
           current step of the numerical propagation
           (see :py:attr:`~state`).
 
       - name: airspeed # [py]
         type: float # [py]
-        description: 
+        description: | # [py]
           The airspeed of the body w.r.t. the atmosphere
 
       - name: velocity # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           The translational velocity of the Body, as set during the
           current step of the numerical propagation
           (see :py:attr:`~state`).
 
       - name: inertial_to_body_fixed_frame # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           The rotation from inertial frame (with global frame
           orientation) to this Body's body-fixed frame. The rotation is
           always returned here as a rotation matrix.  If the body's
@@ -228,33 +228,33 @@ classes:
 
       - name: body_fixed_to_inertial_frame # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           The rotation from this Body's body-fixed frame to inertial
           frame (see :py:attr:`~inertial_to_body_fixed_frame`).
 
       - name: inertial_to_body_fixed_frame_derivative # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           Time derivative of rotation matrix from inertial frame to this
           Body's body-fixed frame
           (see :py:attr:`~inertial_to_body_fixed_frame`).
 
       - name: body_fixed_to_inertial_frame_derivative # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           Time derivative of rotation matrix from this Body's body-fixed
           frame to inertial frame
           (see :py:attr:`~inertial_to_body_fixed_frame`).
 
       - name: inertial_angular_velocity # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           Angular velocity vector of the body, expressed in inertial
           frame (see :py:attr:`~inertial_to_body_fixed_frame`).
     
       - name: body_fixed_angular_velocity # [py]
         type: numpy.ndarray # [py]
-        description: |
+        description: | # [py]
           Angular velocity vector of the body, expressed in body-fixed
           frame (see :py:attr:`~inertial_to_body_fixed_frame`).
 
@@ -268,7 +268,7 @@ classes:
        typical Tudat numerical simulation, and is fundamental for the
        overall Tudat architecture.
 
-    attributes:
+    # attributes:
 
     methods:
       - name: getBody # [cpp]
@@ -403,6 +403,3 @@ classes:
           type: numpy.ndarray # [py]
           description: |
             Name of the Body that is to be removed.
-
-
-      
