--- a/docstrings/numerical_simulation/environment_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/environment_setup/__package__.yaml
@@ -13,6 +13,14 @@ modules:
   - rotation_model
   - shape
 
+
+###### enums
+
+  # no enums
+
+######
+
+
 classes:
 
 
@@ -22,14 +30,14 @@ classes:
       Class for defining settings for the creation of a system of bodies. This object is typicall created from default settings, and
       then adapted to the user's specific needs.
 
-    attributes:
+    attributes: # [py]
       - name: frame_origin # [py] # readonly
         type: str # [py]
-        description: Definition of the global frame origin for the bodies
+        description: Definition of the global frame origin for the bodies # [py]
 
       - name: frame_orientation # [py] # readonly
         type: str # [py]
-        description: Definition of the global frame orienation for the bodies
+        description: Definition of the global frame orienation for the bodies # [py]
 
 
     methods:
@@ -52,38 +60,44 @@ classes:
       Class for defining settings for the creation of a single body, this object is typically stored inside a
       :class:`BodyListSettings`, object.
 
-    properties:
+    properties: # [py]
       - name: constant_mass # [py]
         type: float # [py]
-        description: Mass that gets assigned to the vehicle. Note that this mass does *not* automatically define a gravity field
-          model, but is instead used for the calculation of non-conservative forces only. When creating a body with a gravity field,
-          leave this entry empty.
+        description: |
+          Mass that gets assigned to the vehicle. Note that this mass does *not* automatically define a gravity field   # [py]
+          model, but is instead used for the calculation of non-conservative forces only. When creating a body with a gravity field,   # [py]
+          leave this entry empty.   # [py]
 
       - name: atmosphere_settings # [py]
         type: AtmosphereSettings # [py]
-        description: Object that defines the settings of the atmosphere model that is to be created. Note that wind model settings
-          may be defined inside this object. A variable of this type is typically assigned by using a factory function from the
-          :ref:`tudatpy.numerical_simulation.environment_setup.atmosphere` module.
+        description: |
+          Object that defines the settings of the atmosphere model that is to be created. Note that wind model settings  # [py]
+          may be defined inside this object. A variable of this type is typically assigned by using a factory function from the  # [py]
+          :ref:`tudatpy.numerical_simulation.environment_setup.atmosphere` module.  # [py]
 
       - name: ephemeris_settings # [py]
         type: EphemerisSettings # [py]
-        description: Object that defines the settings of the ephemeris model that is to be created. A variable of this type is typically
-          assigned by using a factory function from the :ref:`tudatpy.numerical_simulation.environment_setup.ephemeris` module.
+        description: |
+          Object that defines the settings of the ephemeris model that is to be created. A variable of this type is typically  # [py]
+          assigned by using a factory function from the :ref:`tudatpy.numerical_simulation.environment_setup.ephemeris` module.  # [py]
 
       - name: gravity_field_settings # [py]
         type: GravityFieldSettings # [py]
-        description: Object that defines the settings of the gravity field model that is to be created. A variable of this type is typically
-          assigned by using a factory function from the :ref:`tudatpy.numerical_simulation.environment_setup.gravity_field` module.
+        description: |
+          Object that defines the settings of the gravity field model that is to be created. A variable of this type is typically  # [py]
+          assigned by using a factory function from the :ref:`tudatpy.numerical_simulation.environment_setup.gravity_field` module.  # [py]
 
       - name: rotation_model_settings # [py]
         type: RotationModelSettings # [py]
-        description: Object that defines the settings of the rotation model that is to be created. A variable of this type is typically
-          assigned by using a factory function from the :ref:`tudatpy.numerical_simulation.environment_setup.rotation_model` module.
+        description: |
+          Object that defines the settings of the rotation model that is to be created. A variable of this type is typically # [py]
+          assigned by using a factory function from the :ref:`tudatpy.numerical_simulation.environment_setup.rotation_model` module. # [py]
 
       - name: shape_settings # [py]
         type: BodyShapeSettings # [py]
-        description: Object that defines the settings of the shape model that is to be created. A variable of this type is typically
-          assigned by using a factory function from the :ref:`tudatpy.numerical_simulation.environment_setup.shape` module.
+        description: |
+          Object that defines the settings of the shape model that is to be created. A variable of this type is typically # [py]
+          assigned by using a factory function from the :ref:`tudatpy.numerical_simulation.environment_setup.shape` module. # [py]
 
 functions:
 
@@ -98,17 +112,17 @@ functions:
     parameters:
       - name: bodies # [py]
         type: list[str] # [py]
-        description: "List of name of bodies for which default settings are to be retrieved."
+        description: "List of name of bodies for which default settings are to be retrieved." # [py]
 
       - name: base_frame_origin # [py]
         type: str # [py]
-        description: "Base frame origin of the set of bodies that is to be created."
+        description: "Base frame origin of the set of bodies that is to be created." # [py]
 
       - name: base_frame_orientation # [py]
         type: str # [py]
-        description: "Base frame orientation of the set of bodies that is to be created."
+        description: "Base frame orientation of the set of bodies that is to be created." # [py]
 
-    returns:
+    returns: # [py]
         type: BodyListSettings  # [py]
         description: Object containing the settings for the SystemOfBodies that are to be created # [py]
 
@@ -124,29 +138,29 @@ functions:
     parameters:
       - name: bodies # [py]
         type: list[str] # [py]
-        description: "List of name of bodies for which default settings are to be retrieved."
+        description: "List of name of bodies for which default settings are to be retrieved." # [py]
 
       - name: initial_time # [py]
         type: float # [py]
-        description: "Start time from which the environment settings should be created."
+        description: "Start time from which the environment settings should be created." # [py]
 
       - name: final_time # [py]
         type: float # [py]
-        description: "End time up to which the environment settings should be created."
+        description: "End time up to which the environment settings should be created." # [py]
 
       - name: base_frame_origin # [py]
         type: str # [py]
-        description: "Base frame origin of the set of bodies that is to be created."
+        description: "Base frame origin of the set of bodies that is to be created." # [py]
 
       - name: base_frame_orientation # [py]
         type: str # [py]
-        description: "Base frame orientation of the set of bodies that is to be created."
+        description: "Base frame orientation of the set of bodies that is to be created." # [py]
 
       - name: time_step # [py]
         type: float, default = 300.0 # [py]
-        description: "Time step to be used for the tabulated ephemeris."
+        description: "Time step to be used for the tabulated ephemeris." # [py]
 
 
-    returns:
+    returns: # [py]
         type: BodyListSettings  # [py]
         description: Object containing the settings for the SystemOfBodies that are to be created # [py]
