--- a/docstrings/numerical_simulation/environment_setup/radiation_pressure.yaml
+++ b/docstrings/numerical_simulation/environment_setup/radiation_pressure.yaml
@@ -7,9 +7,8 @@ extended_summary: |
   radiation pressure models of celestial bodies in an environment.
 
 
-classes:
 
-###### enums
+enums:
 
   #    py::enum_<tss::RadiationPressureType>
   #        enum tudat::simulation_setup::RadiationPressureType
@@ -19,12 +18,15 @@ classes:
     extended_summary: |
       Enumeration of radiation pressure types supported by tudat.
 
-    attributes:
+    members:
       - name: cannonball_radiation_pressure_interface
       - name: panelled_radiation_pressure_interface
       - name: solar_sailing_radiation_pressure_interface
 
 ######
+
+
+classes:
 
 
   - name: RadiationPressureInterfaceSettings
