--- a/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
+++ b/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
@@ -64,6 +64,7 @@ classes:
 
       - name: target_frame # [py] # readonly
         type: str # [py]
+        description: Target frame of rotation model. # [py]
 
     methods:
       #      - name: __init__ # [py]
