--- a/docstrings/numerical_simulation/environment_setup/shape.yaml
+++ b/docstrings/numerical_simulation/environment_setup/shape.yaml
@@ -37,10 +37,11 @@ classes:
     short_summary: "Class for defining model settings of a strictly spherical body shape."
     extended_summary: "`BodyShapeSettings` derived class for strictly spherical body shape model settings."
 
-    attributes: # [py]
-      - name: radius # [py] # readonly
+    properties: # [py]
+      - name: radius # [py]
         type: float # [py]
         description: 'Radius specifying spherical body shape.' # [py]
+        readonly: True # [py]
 
     methods:       # [cpp]
     #methods:      # [py]
@@ -62,13 +63,15 @@ classes:
     short_summary: "Class for defining model settings of a oblate spherical body shape."
     extended_summary: "`BodyShapeSettings` derived class for oblate spherical body shape model settings."
 
-    attributes: # [py]
-      - name: equatorial_radius # [py] # readonly
+    properties: # [py]
+      - name: equatorial_radius # [py]
         type: float # [py]
         description: 'Equatorial radius of the oblate spherical body shape.' # [py]
-      - name: flattening # [py] # readonly
+        readonly: True # [py]
+      - name: flattening # [py]
         type: float # [py]
         description: 'Flattening of spheroid shape model.' # [py]
+        readonly: True # [py]
 
     methods:       # [cpp]
     #methods:      # [py]
@@ -112,7 +115,7 @@ functions:
 
     returns:
         type: SphericalBodyShapeSettings  # [py]
-        description: # [py]
+        description: Instance of SphericalBodyShapeSettings class. # [py]
         type: SphericalBodyShapeSettings  # [cpp]
         description: # [cpp]
 
@@ -126,7 +129,7 @@ functions:
 
     returns:
         type: BodyShapeSettings  # [py]
-        description: # [py]
+        description: Instance of BodyShapeSettings class. # [py]
         type: BodyShapeSettings  # [cpp]
         description: # [cpp]
 
@@ -154,6 +157,6 @@ functions:
 
     returns:
         type: OblateSphericalBodyShapeSettings  # [py]
-        description: # [py]
+        description: Instance of OblateSphericalBodyShapeSettings class. # [py]
         type: OblateSphericalBodyShapeSettings  # [cpp]
         description: # [cpp]
