--- a/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
+++ b/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
@@ -53,18 +53,20 @@ classes:
       Basic rotation model has constant orientation of the rotation axis (body-fixed z-axis) and constant rotation rate about this axis.
       Rotation models requiring additional information must be created using the factory functions which create the specific object derived from this base class.
 
-    attributes: # [py]
-      - name: rotation_type # [py] # readonly
+    properties: # [py]
+      - name: rotation_type # [py]
         type: RotationModelType # [py]
         description: Type of rotation model that is to be created. # [py]
+        readonly: True # [py]
 
       - name: base_frame # [py]
         type: str # [py]
         description: Base frame of rotation model. # [py]
 
-      - name: target_frame # [py] # readonly
+      - name: target_frame # [py]
         type: str # [py]
         description: Target frame of rotation model. # [py]
+        readonly: True # [py]
 
     methods:
       #      - name: __init__ # [py]
